# postgres-monitor

./: README.md  pyproject.toml
postgres_monitor/: .env.bak  app.py
postgres_monitor/core/: query.py
postgres_monitor/templates/: index.html
postgres_monitor/templates/static/: style.css
tests/: test_postgres_monitor.py
