[tool.poetry]
name = "postgres-monitor"
version = "0.1.0"
description = ""
authors = ["PaxPrz <paxprajapati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.14.1"
asyncpg = "^0.21.0"
uvicorn = "^0.12.2"
sse-starlette = "^0.6.1"
Jinja2 = "^2.11.2"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
